Styles System => Stable Android and iOS Add properties of Shell for improve the iOS experience.
Remarks:
In both Tabs and Flyouts there is no need to add the size or color with IconFonts the ForegroundColor and UnselectedColor properties do that job.

--- a/XF_FoodApp/XF_FoodApp/AppShell.xaml
+++ b/XF_FoodApp/XF_FoodApp/AppShell.xaml
@@ -26,9 +26,7 @@
     <!--<Shell.FlyoutIcon>
         <FontImageSource
             FontFamily="{StaticResource MaterialIconFont}"
-            Glyph="{x:Static FontAwesome:IconFont.FormatListBulletedSquare}"
-            Size="28"
-            Color="White" />
+            Glyph="{x:Static FontAwesome:IconFont.FormatListBulletedSquare}"/>
     </Shell.FlyoutIcon>-->
     <!--  +++++++++++++++++++++++++++++++++++++++++++++  -->
 
@@ -40,6 +38,11 @@
         <Style
             x:Key="BaseStyle"
             TargetType="Element">
+            <!-- En iOS esta propiedad cambia el color del FlyoutIcon y los tab superiores seleccionados -->
+             <Setter Property="Shell.ForegroundColor" Value="{DynamicResource colQua}" />
+               <!-- En iOS esta propiedad cambia el color tabs superiores no seleccionados -->
+             <Setter Property="Shell.UnselectedColor" Value="{DynamicResource colTabBarUns}" />
+
             <Setter Property="Shell.BackgroundColor" Value="{StaticResource NavigationPrimary}" />
             <Setter Property="Shell.TitleColor" Value="#FFFFFF" />
             <Setter Property="Shell.TabBarBackgroundColor" Value="{DynamicResource colTabBarBack}" />
