--- a/XF_FoodApp/XF_FoodApp/Views/Profile.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/Profile.xaml
@@ -14,17 +14,25 @@
 
     <Shell.TitleView>
         <StackLayout
-            Padding="0,0,10,0"
             Orientation="Horizontal">
             <Label
                 Text="My Profile"
                 Style="{StaticResource TxtH6Flyout_1}"
-                VerticalOptions="CenterAndExpand" />
+                VerticalOptions="CenterAndExpand">
+                <Label.HorizontalOptions>
+                     <OnPlatform x:TypeArguments="LayoutOptions"
+                      iOS="EndAndExpand"
+                      Android="StartAndExpand" />
+                </Label.HorizontalOptions>
+            </Label>
+        
             <Switch
                 Toggled="Switch_Toggled"
                 OnColor="Black"
                 HorizontalOptions="EndAndExpand"
-                VerticalOptions="CenterAndExpand" />
+                VerticalOptions="CenterAndExpand"
+                Visual="Material"
+                Margin="0,0,10,0" />
         </StackLayout>
     </Shell.TitleView>
 
