--- a/XF_FoodApp/XF_FoodApp/Styles/Icons.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Icons.xaml
@@ -107,11 +107,15 @@
 
     <!--  FontImageSource FLYOUT  -->
     <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    
+    <!--  Flyout Icon  -->
+    <!--  =====================================================================  -->
     <FontImageSource
         x:Key="icon_fly_main"
         FontFamily="{StaticResource MaterialIconFont}"
         Glyph="{x:Static FontAwesome:IconFont.FormatListBulletedSquare}"/>
-
+    <!--  =====================================================================  -->
+    
     <FontImageSource
         x:Key="icon_fly_home"
         FontFamily="{StaticResource MaterialIconFont}"
