--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
@@ -8,26 +8,37 @@
     Source="/Styles/General.xaml"
     mc:Ignorable="d">
 
+    <!--  Color Range  -->
+    <Color x:Key="colPrim">#FF9A196B</Color>
+    <Color x:Key="colSec">#FF26315F</Color>
+    <Color x:Key="colTer">#FF56565A</Color>
+    <Color x:Key="colQua">#FFFFFFFF</Color>
+    <Color x:Key="colQui">#FF000000</Color>
+
+    <!--  Backgroundcolors  -->
+    <Color x:Key="colBG1">#FFFFFFFF</Color>
+    <Color x:Key="colBG2">#FFF5F8FB</Color>
+
+    <!--  Entry Colors  -->
     <Color x:Key="colAccCheck">#FFE7F9F5</Color>
     <Color x:Key="colAccError">#FFF9E7EB</Color>
     <Color x:Key="colAccUns">#FFF2F3F5</Color>
+    <Color x:Key="colUnsPrim">#FFC7CAD1</Color>
     <Color x:Key="colAltQua">#FFE3E7EF</Color>
-    <Color x:Key="colBG2">#FFF5F8FB</Color>
+
+    <!--  Border Colors  -->
     <Color x:Key="colBorCheck">#FF10CA87</Color>
     <Color x:Key="colBorError">#FFCA1030</Color>
-    <Color x:Key="colPrim">#FF9A196B</Color>
-    <Color x:Key="colQua">#FFFFFFFF</Color>
-    <Color x:Key="colQui">#FF000000</Color>
+
+    <!--  Remark Colors  -->
     <Color x:Key="colRemPrim">#FFF93963</Color>
     <Color x:Key="colRemSec">#FFD4145C</Color>
-    <Color x:Key="colSec">#FF26315F</Color>
-    <Color x:Key="colTer">#FF56565A</Color>
-    <Color x:Key="colBG1">#FFFFFFFF</Color>
+
+    <!--  Surface Colors  -->
     <Color x:Key="colSurf1">#FFFFFFFF</Color>
     <Color x:Key="colSurf2">#FFFFFFFF</Color>
-    <Color x:Key="colUnsPrim">#FFC7CAD1</Color>
 
-
+    <!--  Shell Colors  -->
     <Color x:Key="colTabBarUns">#FF96969A</Color>
     <Color x:Key="colTabBarBack">#FFFFFFFF</Color>
 
