--- a/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/Discover.xaml
@@ -13,25 +13,28 @@
     </ContentPage.BindingContext>
 
     <Shell.TitleView>
-        <StackLayout Orientation="Horizontal"
-                     Padding="0,0,10,0">
+        <StackLayout
+            Padding="0,0,10,0"
+            Orientation="Horizontal">
             <Label
                 Text="Explore restaurants"
-                Style="{StaticResource TxtH6Flyout_1}"
+                Style="{StaticResource TxtHeadline6_3}"
                 VerticalOptions="CenterAndExpand">
                 <Label.HorizontalOptions>
-                     <OnPlatform x:TypeArguments="LayoutOptions"
-                      iOS="EndAndExpand"
-                      Android="StartAndExpand" />
+                    <OnPlatform
+                        x:TypeArguments="LayoutOptions"
+                        iOS="EndAndExpand"
+                        Android="StartAndExpand" />
                 </Label.HorizontalOptions>
             </Label>
 
             <Switch
+                IsToggled="{Binding IsBusy}"
                 Toggled="Switch_Toggled"
                 OnColor="Black"
                 HorizontalOptions="EndAndExpand"
                 VerticalOptions="CenterAndExpand"
-                Visual="Material"/>
+                Visual="Material" />
         </StackLayout>
     </Shell.TitleView>
 
