--- a/XF_FoodApp/XF_FoodApp/AppShell.xaml
+++ b/XF_FoodApp/XF_FoodApp/AppShell.xaml
@@ -127,19 +127,19 @@
         <Tab
             Title="Search"
             Icon="{StaticResource icon_fly_search}">
-            <ShellContent ContentTemplate="{DataTemplate view:Profile}" />
+            <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
         <!--  Shopping List  -->
         <Tab
             Title="Shopping List"
             Icon="{StaticResource icon_fly_basket}">
-            <ShellContent ContentTemplate="{DataTemplate view:Profile}" />
+            <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
         <!--  Weekly Planning  -->
         <Tab
             Title="Weekly Planning"
             Icon="{StaticResource icon_fly_ticket}">
-            <ShellContent ContentTemplate="{DataTemplate view:Profile}" />
+            <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
 
     </FlyoutItem>
@@ -152,13 +152,13 @@
         <Tab
             Title="Settings"
             Icon="{StaticResource icon_fly_settings}">
-            <ShellContent ContentTemplate="{DataTemplate view:Profile}" />
+            <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
         <!--  Support  -->
         <Tab
             Title="Support"
             Icon="{StaticResource icon_fly_support}">
-            <ShellContent ContentTemplate="{DataTemplate view:Profile}" />
+            <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
 
     </FlyoutItem>
