--- a/XF_FoodApp/XF_FoodApp/Styles/Texts.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Texts.xaml
@@ -89,6 +89,7 @@
     <Style x:Key="TxtH6Flyout_1" TargetType="Label">
         <Setter Property="TextColor" Value="{DynamicResource colQua}" />
         <Setter Property="FontSize" Value="{StaticResource TxtSizeH6_20}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeH6_20}" />
         <Setter Property="FontFamily" Value="{StaticResource RegularFont_Pacifico}" />
     </Style>
     <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
@@ -133,7 +134,14 @@
     </Style>
 
     <Style x:Key="TxtHeadline6_3" TargetType="Label" BasedOn="{StaticResource TxtH6Flyout_1}"/>
-
+    
+    <Style x:Key="TxtHeadline6_4" TargetType="Label">
+        <Setter Property="TextColor" Value="{DynamicResource colPrim}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeH6_20}" />
+        <Setter Property="FontSize" Value="{StaticResource TxtSizeH6_20}" />
+        <Setter Property="FontFamily" Value="{StaticResource RegularFont_Pacifico}" />
+    </Style>
+    
     <Style x:Key="TxtTitle_1" TargetType="Label">
         <Setter Property="TextColor" Value="{DynamicResource colSec}" />
         <Setter Property="FontSize" Value="{StaticResource TxtSizeTit_18}" />
