Application order (62% Completed)

--- a/XF_FoodApp/XF_FoodApp/Views/Favourite.xaml
+++ b/XF_FoodApp/XF_FoodApp/Views/Favourite.xaml
@@ -14,8 +14,8 @@
 
     <Shell.TitleView>
         <StackLayout
-            Orientation="Horizontal"
-             Padding="0,0,50,0">
+            Padding="0,0,50,0"
+            Orientation="Horizontal">
             <Label
                 Text="Favourite"
                 Style="{StaticResource TxtHeadline6_3}"
