--- a/XF_FoodApp/XF_FoodApp/AppShell.xaml
+++ b/XF_FoodApp/XF_FoodApp/AppShell.xaml
@@ -21,19 +21,18 @@
     mc:Ignorable="d">
 
 
-    <!--  CHANGED FLYOUT ICON  -->
-    <!--  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--#region CHANGED FLYOUT ICON-->
     <!--<Shell.FlyoutIcon>
         <FontImageSource
             FontFamily="{StaticResource MaterialIconFont}"
             Glyph="{x:Static FontAwesome:IconFont.FormatListBulletedSquare}"/>
     </Shell.FlyoutIcon>-->
-    <!--  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--#endregion-->
 
 
-    <!--  SHELL RESOURCES  -->
-    <!--  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--#region SHELL RESOURCES-->
     <Shell.Resources>
+        <!--#region SHELL STYLES-->
         <Color x:Key="NavigationPrimary">#FF9A196B</Color>
         <Style
             x:Key="BaseStyle"
@@ -49,46 +48,49 @@
             <Setter Property="Shell.TabBarUnselectedColor" Value="{DynamicResource colTabBarUns}" />
             <Setter Property="Shell.TabBarTitleColor" Value="{DynamicResource colPrim}" />
         </Style>
-
-        <!--  ADD TabBar FlyoutBehavior is INVISIBLE  -->
+        <!--#endregion-->
+        
+        <!--#region ADD TabBar FlyoutBehavior is INVISIBLE-->
         <Style
             BasedOn="{StaticResource BaseStyle}"
             TargetType="TabBar"
             ApplyToDerivedTypes="True" />
+        <!--#endregion-->
 
-        <!--  ADD ShellItem FlyoutBehavior is VISIBLE  -->
+        <!--#region ADD ShellItem FlyoutBehavior is VISIBLE-->
         <Style
             BasedOn="{StaticResource BaseStyle}"
             TargetType="ShellItem"
             ApplyToDerivedTypes="True" />
+        <!--#endregion-->
 
-
-        <!--  ADD FlyoutItem FlyoutBehavior is VISIBLE  -->
+        <!--#region ADD FlyoutItem FlyoutBehavior is VISIBLE-->
         <Style
             BasedOn="{StaticResource BaseStyle}"
             TargetType="FlyoutItem"
             ApplyToDerivedTypes="True" />
-
+        <!--#endregion-->
     </Shell.Resources>
-    <!--  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--#endregion-->
 
 
 
-    <!--  TABS SECTOR  -->
-    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--#region TABS SECTOR-->
     <!--  Home in Flyout GROUP  -->
     <ShellItem
         Title="Home"
         Icon="{StaticResource icon_fly_home}"
         FlyoutDisplayOptions="AsSingleItem">
 
-        <!--  Explore Tab  -->
+        <!--#region Explore Tab-->
         <Tab
             Title="Explore"
             Icon="{StaticResource icon_tab_explore}">
             <ShellContent ContentTemplate="{DataTemplate view:Discover}" />
         </Tab>
-        <!--  My order Tab  -->
+        <!--#endregion-->
+
+        <!--#region My order Tab-->
         <Tab
             Title="My order"
             Icon="{StaticResource icon_tab_order}">
@@ -99,69 +101,78 @@
                 Title="Past orders"
                 ContentTemplate="{DataTemplate view:PastOrders}" />
         </Tab>
-        <!--  Favourite Tab  -->
+        <!--#endregion-->
+
+        <!--#region Favourite Tab-->
         <Tab
             Title="Favourite"
             Icon="{StaticResource icon_tab_favorite}">
             <ShellContent ContentTemplate="{DataTemplate view:Favourite}" />
         </Tab>
-        <!--  Profile Tab  -->
+        <!--#endregion-->
+
+        <!--#region Profile Tab-->
         <Tab
             Title="Profile"
             Icon="{StaticResource icon_tab_profile}">
             <ShellContent ContentTemplate="{DataTemplate view:Profile}" />
         </Tab>
-
+        <!--#endregion-->
     </ShellItem>
-    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--#endregion-->
 
 
-    <!--  FLYOUT SECTOR  -->
-    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--#region FLYOUT SECTOR-->
     <FlyoutItem
         Title="Main1"
         FlyoutDisplayOptions="AsMultipleItems"
         Icon="{StaticResource icon_filtering}">
 
-        <!--  Search  -->
+        <!--#region Search-->
         <Tab
             Title="Search"
             Icon="{StaticResource icon_fly_search}">
             <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
-        <!--  Shopping List  -->
+        <!--#endregion-->
+
+        <!--#region Shopping List-->
         <Tab
             Title="Shopping List"
             Icon="{StaticResource icon_fly_basket}">
             <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
-        <!--  Weekly Planning  -->
+        <!--#endregion-->
+
+        <!--#region Weekly Planning-->
         <Tab
             Title="Weekly Planning"
             Icon="{StaticResource icon_fly_ticket}">
             <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
-
+        <!--#endregion-->
     </FlyoutItem>
 
     <FlyoutItem
         Title="Main2"
         FlyoutDisplayOptions="AsMultipleItems">
 
-        <!--  Settings  -->
+        <!--#region Settings-->
         <Tab
             Title="Settings"
             Icon="{StaticResource icon_fly_settings}">
             <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
-        <!--  Support  -->
+        <!--#endregion-->
+        
+        <!--#region Support-->
         <Tab
             Title="Support"
             Icon="{StaticResource icon_fly_support}">
             <ShellContent ContentTemplate="{DataTemplate view:BlankPage}" />
         </Tab>
-
+        <!--#endregion-->
     </FlyoutItem>
-    <!--  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++  -->
+    <!--#endregion-->
 
 </Shell>
