--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/DarkTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/DarkTheme.xaml
@@ -8,38 +8,45 @@
     Source="/Styles/General.xaml"
     mc:Ignorable="d">
 
-    <!--  Color Range  -->
+    <!--#region Color Range-->
     <Color x:Key="colPrim">#FFF871C7</Color>
     <Color x:Key="colSec">#FF8199FF</Color>
     <Color x:Key="colTer">#FFC5C5C5</Color>
     <Color x:Key="colQua">#FFFFFFFF</Color>
     <Color x:Key="colQui">#FFFFFFFF</Color>
+    <!--#endregion-->
 
-    <!--  Backgroundcolors  -->
+    <!--#region  Backgroundcolors-->
     <Color x:Key="colBG1">#FF121212</Color>
     <Color x:Key="colBG2">#FF121212</Color>
+    <!--#endregion-->
 
-    <!--  Entry Colors  -->
+    <!--#region Entry Colors-->
     <Color x:Key="colAccCheck">#FFE7F9F5</Color>
     <Color x:Key="colAccError">#FFF9E7EB</Color>
     <Color x:Key="colAccUns">#FFF2F3F5</Color>
     <Color x:Key="colUnsPrim">#FFC7CAD1</Color>
     <Color x:Key="colAltQua">#FFE3E7EF</Color>
+    <!--#endregion-->
 
-    <!--  Border Colors  -->
+    <!--#region Border Colors-->
     <Color x:Key="colBorCheck">#FF10CA87</Color>
     <Color x:Key="colBorError">#FFCA1030</Color>
+    <!--#endregion-->
 
-    <!--  Remark Colors  -->
+    <!--#region  Remark Colors-->
     <Color x:Key="colRemPrim">#FFF93963</Color>
     <Color x:Key="colRemSec">#FFD4145C</Color>
+    <!--#endregion-->
 
-    <!--  Surface Colors  -->
+    <!--#region  Surface Colors-->
     <Color x:Key="colSurf1">#FF121212</Color>
     <Color x:Key="colSurf2">#FF1D1D1D</Color>
+    <!--#endregion-->
 
-    <!--  Shell Colors  -->
+    <!--#region Shell Colors-->
     <Color x:Key="colTabBarUns">#FFC5C5C5</Color>
     <Color x:Key="colTabBarBack">#FF121212</Color>
+    <!--#endregion-->
 
 </ResourceDictionary>
